<resources>
    <string name="app_name">BlueWatcher</string>
    <string name="app_version">1.1.3</string>
    <string name="action_settings">About</string>
    <string name="exit_settings">Exit</string>
    <string name="not_available">Not available</string>
    <string name="devices_activity">Watches</string>
    <string name="ble_not_supported">Bluetooth Low Energy (BLE) not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="unknown_device">Unknown device</string>
    <string name="intro_message">Bluetooth Low Energy Devices</string>
    <string name="about_back_button">Back</string>
    <string name="about_developer">support@bluewatcher.es</string>
    <string name="app_description">BlueWatcher controls your Bluetooth 4.0 watch</string>
    <string name="device_name">Watch Status</string>
    <string name="connection_status">Status:</string>
    <string name="alert_button">Test</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="disconnected">Disconnected</string>
    <string name="not_paired">Not paired. Pair watch!</string>
    <string name="unavailable_services">Unavailable</string>
    <string name="available_services">Available</string>
    <string name="security_add_notification_listener">Please, allow BlueWatcher to access your notifications</string>
    <string name="test_alert">Sending BW alert and synchronising time!</string>
    <string name="watch_not_connected_alert">ERROR: Watch is not connected</string>
    <string name="time_service_not_available">ERROR: Time Service not available</string>
    <string name="notify_incoming_calls">Notify incoming calls</string>
    <string name="whatsapp_notification">Whatsapp</string>
    <string name="incoming_call_resolve">Resolve contact names</string>
    <string name="whatsapp_notify_groups">Notify group messages</string>
    <string name="whatsapp_notify_all">Notify all incoming messages</string>
    <string name="custom_notification_config">Custom notifications</string>
    <string name="add_button">Add</string>
    <string name="radio_time_based">Delay new messages</string>
    <string name="radio_after_read">Notify after read</string>
    <string name="radio_alert_all">Notify all messages</string>
    <string name="filter_text">Notification filter</string>
    <string name="hint_filter">"Ex: Message from "</string>
    <string name="hint_delay">min</string>
    <string name="hint_delay_seconds">sec</string>
    <string name="error_null_whatsapp_delay">ERROR: Delay time is not specified!</string>
    <string name="error_no_ble_service">ERROR: Bluetooth service not available!</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="destroy_watcher_activity_resources">PROBLEM: Android is cleaning BlueWatcher!</string>
    <string name="error_apply">Error applying config</string>
    <string name="warranty_lost">WARNING: Use BlueWatcher at your own risk. If you use this app you can lose your watch warranty. The creators of this software are not responsible for any damage you can cause to your watch or your phone.</string>
    <string name="edit_alert_type">Alert type:</string>
    <string name="ok_text">OK</string>
    <string name="remove_text">Remove</string>
    <string name="select_watch">Select watch</string>
    <string name="click_exit_button">Press EXIT button to close BlueWatcher</string>
    <string name="find_app_text">Find</string>
    <string name="find_app_title">Find application</string>
    <string name="cancel_text">Cancel</string>
    <string name="incoming_call_config">Incoming call notifications</string>
    <string name="whatsapp_config">Whatsapp notifications</string>
    <string name="settings">Configuration</string>
    <string name="add_help_instructions">Select installed application to configure notifications:</string>
    <string name="custom_label_title">Label</string>
    <string name="custom_prefix_text">Prefix</string>
    <string name="header_filters_text">Header Filters</string>
    <string name="header_filter_text">Header Filter</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="bluewatcher_settings">BlueWatcher settings</string>
    <string name="start_camera">Start Camera</string>
    <string name="launch_start_text">Launch BW at system startup</string>
    <string name="date_time_sync_text">Synchronize watch date &amp; time</string>
    <string name="not_licensed_app">BlueWatcher is not licensed. Please, visit Google Play Store and buy official BlueWatcher app!</string>
    <string name="buy_app_button">Buy app</string>
    <string name="license_check_error">BlueWatcher: Error checking license!</string>
    <string name="android_notification_settings">Android Notification Settings</string>
    <string name="edit_notifications">Modify</string>
    <string name="help">Help</string>
    <string name="more_info">More info</string>
    <string name="first_connection_warning">Is this your first connection? READ THIS!\n\n1) You must CLEAR your watch pairing info.\n2) You must UNPAIR your watch from your phone.\n3) You MUST PAIR watch and phone MANUALLY from Android Bluetooth Settings before connecting!\n\nIf you connected your watch with any other application you MUST follow the steps described before.\n\nIf you have problems connecting with your watch, please, read BlueWatcher User\'s Guide or contact us through BlueWatcher Support.</string>
    <string name="whats_new">BlueWatcher has been updated!\n\nWhat\'s new?\n\n  - Solved high CPU usage problem when connection is broken\n\n  - New Option: Disable Phone Control services\n\n  - Android 5.X Lollipop connection problems announcement\n\n  - Minor bug fixes</string>
    <string name="autoconnect_start">Turn ON your watch bluetooth! \n Connecting to </string>
    <string name="hello_world">Hello world!</string>
    <string name="available_services_text">Available watch services</string>
    <string name="show_available_services_text">Show available services</string>
    <string name="phone_control_service">Phone control</string>
    <string name="phone_finder_service">Phone finder</string>
    <string name="notifications_service">Notifications</string>
    <string name="gba400_notifications_service">GBA-400 Notifications</string>
    <string name="time_sync_service">Time synchronization</string>
    <string name="unrecognized_button">Unrecognized button:</string>
    <string name="missed_notifications">Missed alerts!</string>
    <string name="phone_control_menu_text">Phone control</string>
    <string name="music_control_available">This version of BlueWatcher allows you to control music using watch CTRL buttons. Enter CTRL mode in your watch. Next BlueWatcher releases will incorporate advanced control features!</string>
    <string name="music_control_unavailable"><u>Phone Control Service not available! </u> \n\nYou have not selected your watch model. Please, connect your watch with BlueWatcher</string>
    <string name="default_upper_left_button">Upper left button</string>
    <string name="default_upper_right_button">Upper right button</string>
    <string name="default_down_right_button">Bottom right button</string>
    <string name="gba400_upper_left_button">Upper left button</string>
    <string name="gba400_down_left_button">Bottom left button</string>
    <string name="gba400_down_right_button">Bottom right button</string>
    <string name="gba400_wheel_up_button">Wheel up</string>
    <string name="gba400_wheel_down_button">Wheel down</string>
    <string name="stb1000_upper_left_button">Upper left button</string>
    <string name="stb1000_down_left_button">Bottom left button</string>
    <string name="stb1000_down_right_button">Bottom right button</string>
    <string name="stb1000_upper_right_button">Upper right button</string>
    <string name="stb1000_power_button">Power button</string>
    <string name="gb5600_down_right_button">Bottom right button</string>
    <string name="gb5600_upper_left_button">Upper left button</string>
    <string name="phone_control_info_button">More info</string>
    <string name="show_reconnect_message_text">Show reconnection message</string>
    <string name="phone_find_message">Watch is finding the phone!</string>
    <string name="enable_phone_finder">Enable phone finder service</string>
    <string name="phone_finder_delay">Finder alert duration (s)</string>
    <string name="found_button_text">Found!</string>
    <string name="phone_finder_help">You are looking for your phone! Press \'Found!\' button if you found it.</string>
    <string name="finder_alert_volume_text">Phone finder volume</string>
    <string name="finder_not_supported">Phone finder service not available. This service is only available for GBA-400 model. Please, connect your GBA-400 to configure phone finder service.</string>
    <string name="title_activity_borrar">BorrarActivity</string>
    <string name="separator"> ==> </string>
    <string name="current_control_mode_header">Control Mode</string>
    <string name="setting_send_control_mode">Send control mode notification</string>
    <string name="control_modes_text_header">Phone control modes</string>
    <string name="phone_control_help_header_text">Phone control help</string>
    <string name="phone_control_edit_header_text">Phone control editor</string>
    <string name="name">Name</string>
    <string name="togglePlayPause">MUSIC: Toggle Play/Pause</string>
    <string name="playNext">MUSIC: Next Song</string>
    <string name="playPrevious">MUSIC: Previous Song</string>
    <string name="volumeUp">VOLUME: Raise</string>
    <string name="volumeDown">VOLUME: Lower</string>
    <string name="sendControlMode">BLUEWATCHER: Show control mode</string>
    <string name="controlModeChanged">CHANGE CONTROL MODE</string>
    <string name="cleanNotifications">GBA-400: Clear notification</string>
    <string name="sendPhoneBatteryLevel">BATTERY: Show level</string>
    <string name="startCamera">CAMERA: Start camera</string>
    <string name="takePhoto">CAMERA: Take photograph</string>
    <string name="control_mode">Mode:</string>
    <string name="gba400_clean_notification_text">GBA-400: Watch button cleans notification</string>
    <string name="phone_control_help"><b>\'Control Modes\'</b> allows you to configure multiple watch button mappings. You can switch between different control modes.\n\n <b>\'Add\'</b> new control modes. Control modes is an ordered sequence. Select the desired command for every button in a control mode. We provide a wide range of commands. More commands in the comming future!\n\n

If you configure multiple control modes, remember to set <b>\'CHANGE CONTROL MODE\'</b> command to one of your buttons.\n\n

When BlueWatcher is connected to your watch, you can control your phone using the current control mode commands or switch to the next control mode using <b>\'CHANGE CONTROL MODE\'</b> command to use your next control mode commands.\n\n

There is no limit in the number of control modes.

If you need help contact <b>support@bluewatcher.es</b> or read <b>BlueWatcher User\'s Guide</b>.</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="bluewatcher_camera">BlueWatcher Camera</string>
    <string name="start">Start</string>
    <string name="capture">Capture</string>
    <string name="save_text">Save</string>
    <string name="flash_on_text">Flash ON</string>
    <string name="flash_off_text">Flash OFF</string>
    <string name="error_acquiring_camera">Error activating camera!</string>
    <string name="lollipop_detected_header">WARNING: Android 5.X detected!</string>
	<string name="disable_ble_server">Disable Phone Control services</string>
</resources>