<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bluewatcher.BlueWatcherActivity" >

    <item
        android:id="@+id/bluewatcher_help"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/help"/>
     <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/exit_settings"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/exit_settings"/>
    <item
        android:id="@+id/test_watch"
        android:orderInCategory="50"
        android:showAsAction="ifRoom|withText"
        android:title="@string/alert_button"/>

</menu>
