<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bluewatcher.activity.SettingsActivity" >

    <TextView
        android:id="@+id/available_services_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bluewatcher_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/startup_at_boot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/available_services_header"
        android:layout_marginStart="18dp"
        android:layout_marginTop="37dp"
        android:text="@string/launch_start_text" />

    <CheckBox
        android:id="@+id/show_reconnect_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/startup_at_boot"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/startup_at_boot"
        android:layout_marginStart="18dp"
        android:text="@string/show_reconnect_message_text" />

    <CheckBox
        android:id="@+id/send_control_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/show_reconnect_message"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/startup_at_boot"
        android:layout_below="@+id/show_reconnect_message"
        android:layout_marginStart="18dp"
        android:text="@string/setting_send_control_mode" />
    
    <CheckBox
        android:id="@+id/gba400_clean_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/send_control_mode"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/startup_at_boot"
        android:layout_below="@+id/send_control_mode"
        android:layout_marginStart="18dp"
        android:text="@string/gba400_clean_notification_text" />

    <Button
        android:id="@+id/notifications_config_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round"
        android:text="@string/edit_notifications"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_camera"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notifications_config_button"
        android:layout_below="@+id/TextView01"
        android:background="@drawable/round"
        android:text="@string/start"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notifications_config_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/bluewatcher_camera"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/disableServerOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gba400_clean_notification"
        android:layout_below="@+id/gba400_clean_notification"
        android:text="@string/disable_ble_server" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disableServerOption"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/android_notification_settings"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
