<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bluewatcher.activity.ControlModesActivity" >


    <TextView
        android:id="@+id/control_modes_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/control_modes_text_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/phone_control_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/control_modes_header"
        android:text="@string/music_control_unavailable"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/control_modes_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/control_modes_help"
        android:layout_below="@+id/control_modes_header"
        android:layout_centerHorizontal="true" >

    </ListView>

    <Button
        android:id="@+id/control_modes_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round"
        android:text="@string/help"
        android:textStyle="bold" />
    
</RelativeLayout>
